--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <main id="maincontent" alt="mian content area">
     <section alt="map" id="map-container">
-      <div id="map" taindex="-1"></div>
+      <div  role="application" id="map" taindex="-1"></div>
     </section>
     <section class="mbody" >
       <div class="filter-options">
@@ -52,5 +52,6 @@
   </footer>
 
 </body>
+<script src="/swr.js"></script>
 
 </html>
