--- a/restaurant.html
+++ b/restaurant.html
@@ -15,12 +15,21 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a tabindex="1" href="/">Restaurant Reviews</a></h1>
+     <ul>
+      <li>
+        <h1><a tabindex="1" href="/">Restaurant Reviews</a></h1>
+      </li>
+     </ul>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
-    </ul>
+    <nav aria-label="Breadcrumb" class="breadcrumb">
+      <ul id="breadcrumb" >
+        <li>
+          <a href="/">Home</a>
+        </li>
+      </ul>
+    </nav>
+
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
@@ -30,12 +39,12 @@
   <main id="maincontent" tabindex="1" class="rmaincontent">
     <!-- Beginning map -->
     <section id="map-container" alt="map">
-      <div tabindex='-1' id="map"></div>
+      <div  role="application" tabindex='-1' id="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2>
       <section tabindex="1" class="restaurant-imgdiv">
         <img id="restaurant-img" alt="image">
         <p id="restaurant-cuisine"></p>
@@ -71,5 +80,5 @@
   <!-- End scripts -->
 
 </body>
-
+<script src="/swr.js"></script>
 </html>
