--- a/restaurant.html
+++ b/restaurant.html
@@ -61,6 +61,8 @@
   <!-- End footer -->
 
   <!-- Beginning scripts -->
+  <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
+   <script type="application/javascript" charset="utf-8" src="js/swr.js"></script>
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
